# lego_transducer

./: .gitignore  CMakeLists.txt  readme.md
dynet_hltc_fork/: CMakeLists.txt
dynet_hltc_fork/dynet/: CMakeLists.txt  devices.cc  devices.h  dynet.cc  expr.cc  expr.h  globals.cc  globals.h  grad-check.cc  init.cc  init.h  model.cc  model.h  nodes-boolean-operation.cc  nodes-boolean-operation.h  nodes.h  training.cc
dynet_hltc_fork/tests/: CMakeLists.txt
eigen-3.3.5/share/eigen3/cmake/: Eigen3Config.cmake  Eigen3Targets.cmake
eigen-3.3.5/share/pkgconfig/: eigen3.pc
src/: backprop_trainable_parameter.cpp  backprop_trainable_parameter.hpp  bilinear_model.cpp  bilinear_model.hpp  boolean_operations_impl.cpp  boolean_operations_impl.hpp  class_traits_helper.cmacro.hpp  composed_transducer_model.cpp  composed_transducer_model.hpp  compute_value_behavior.cpp  compute_value_behavior.hpp  const_value_model.cpp  const_value_model.hpp  dense_model.cpp  dense_model.hpp  dropout_model.cpp  dropout_model.hpp  dynet_computation_graph.cpp  dynet_computation_graph.hpp  embedding_table_model.cpp  embedding_table_model.hpp  generic_rnn_model.cpp  generic_rnn_model.hpp  group_dataset_in_batch.hpp  io_operations_impl.cpp  io_operations_impl.hpp  lambda_transducer_model.cpp  lambda_transducer_model.hpp  lambda_transducer_value_cache.cpp  lambda_transducer_value_cache.hpp  lego_boolean_operations.cpp  lego_guard.cpp  lego_initialize.cpp  lego_io_operations.cpp  lego_list_operations.cpp  lego_param_naming_guard.cpp  lego_tensor.cpp  lego_tensor_operations.cpp  lego_training_pipeline.cpp  list_operations_impl.cpp  (+20 more)
src/examples/: dynamic_xor_demo.cpp  lstm_demo.cpp  recursion_demo.cpp  rnn_diy_demo.cpp  xor_demo.cpp
src/include/: event_emitter.hpp  generate_type_consistent_tuple.hpp  lego_boolean_operations.hpp  lego_guard.hpp  lego_initialize.hpp  lego_io_operations.hpp  lego_list_operations.hpp  lego_param_naming_guard.hpp  lego_primitive_types.hpp  lego_serialization_helper.hpp  lego_tensor.hpp  lego_tensor_operations.hpp  lego_training_pipeline.hpp  lego_transducer.hpp  parallel_array_map.hpp  transducer_dataset.hpp  transducer_instance.hpp  transducer_model.hpp  transducer_optimizer.hpp  transducer_structure.hpp  transducer_typed_value.hpp  value_placeholder.hpp  wallclock_timer.hpp
tutorials/: basics.md  installation.md  using_multiple_gpus.md
tutorials/examples/rnn_diy/: index.md
tutorials/examples/xor/: index.md
